# credit-risk-platform

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  MODEL_CARD.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  health.yml
artifacts/: reference.json
artifacts/registry/: latest.txt
artifacts/registry/20260623-194901/: metadata.json  model.joblib
config/: prometheus.yml
config/grafana/provisioning/dashboards/: credit_scoring.json  dashboard.yml
docker/: Dockerfile
health/: latest.json
scripts/: export_health.py
src/credit_scoring/: __init__.py  cli.py  config.py  domain.py  logging_setup.py  schemas.py  training.py
src/credit_scoring/data/: __init__.py  loader.py  validation.py
src/credit_scoring/features/: __init__.py  pipeline.py
src/credit_scoring/models/: __init__.py  evaluation.py  registry.py  threshold.py
src/credit_scoring/monitoring/: __init__.py  drift.py  metrics.py  reference.py
src/credit_scoring/serving/: __init__.py  app.py  service.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_drift.py  test_schemas.py  test_threshold.py  test_validation.py
