[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-scoring"
version = "0.1.0"
description = "Production platform for credit-default scoring: training, serving, drift monitoring and infrastructure"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "joblib>=1.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "prometheus-client>=0.20",
    "typer>=0.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
credit-scoring = "credit_scoring.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
